# netifaces_mvw_win

./: _build_me.cmd  bld.py  netifaces.c  pyproject.toml  setup.py
src/: entry.c  netifaces.c
